fix: fix text overflow

--- a/src/app/youtube/components/detailed-information/detailed-information.component.scss
+++ b/src/app/youtube/components/detailed-information/detailed-information.component.scss
@@ -65,6 +65,12 @@
         }
 
         p:last-child {
+            width: 420px;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 10;
+            -webkit-box-orient: vertical;  
+
             font-size: 12px;
             line-height: 14px;
             color: #828282;
