--- a/src/app/youtube/components/search-item/search-item.component.scss
+++ b/src/app/youtube/components/search-item/search-item.component.scss
@@ -34,12 +34,18 @@
     }
 
     &--name {
-        line-height: 23px;
-        font-size: 18px;
+        line-height: 21px;
+        font-size: 16px;
         font-weight: bold;
         color: #4f4f4f;
         text-align: center;
         p {
+            width: 230px;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;  
+
             margin: 0.5em 0 0 0;
         }
     }
